--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.application.name=prouvetech
+spring.application.name=api_test
 
-spring.datasource.url=jdbc:mysql://localhost:3306/prouvetech
+spring.datasource.url=jdbc:mysql://localhost:3306/api_test
 spring.datasource.username=kevinl45
 spring.datasource.password=kLyUcd21bxW)eQGP
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
